--- a/template.html
+++ b/template.html
@@ -1,11 +1,35 @@
 <html>
 <head>
-	<script src='scripts/jquery-1.6.1.min.js'></script>
-	<script src='scripts/fp.js'></script>
+	<script src="scripts/jquery-1.6.1.min.js"></script>
+	<script src="./scripts/bootstrap.min.js"></script>
+	<script src="./scripts/lightbox.js"></script>
 	<link rel="stylesheet" href="styles/style.css" type="text/css" />
 	<link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" />
+	<title> New Wrokspace</title>
 </head>
 <body>
-	
+
+	<div class="ctn-btn">
+		<div id="light" class="white_content">
+			<form>
+				<fieldset>
+					<button type="button" class="btn"> Add Link </button>
+					<button type="button" id="loka" class="btn">Save and Close</button>
+				</fieldset>
+			</form>
+		</div>
+		<div id="fade" class="black_overlay"></div>
+		
+		
+		<h2>Workspace</h2>
+        <p>Here you can edit each workspage, add pages, make a new workspace and more. </p>
+        <div class="bs-docs-example">
+			<div class="btn-toolbar" style="margin: 0;">
+            </div>
+        </div>
+			  <button class="btn-large btn" id="new-workspace">New Workspace</button>
+    </div>
+ 		 
+        
 </body>
 </html>
