--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 	<script src="scripts/jquery-1.6.1.min.js"></script>
 	<script src="./scripts/bootstrap.min.js"></script>
 	<script src="./scripts/lightbox.js"></script>
+	<script src="./scripts/fp.js"></script>
 	<link rel="stylesheet" href="styles/style.css" type="text/css" />
 	<link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css" />
 	<title> New Wrokspace</title>
@@ -13,8 +14,8 @@
 		<div id="light" class="white_content">
 			<form>
 				<fieldset>
-					<button type="button" class="btn"> Add Link </button>
-					<button type="button" id="loka" class="btn">Save and Close</button>
+					<button type="text" class="btn"> Add Link </button>
+					<button type="button" id="save_close" class="btn">Save and Close</button>
 				</fieldset>
 			</form>
 		</div>
